--- a/lib/firepad.css
+++ b/lib/firepad.css
@@ -50,7 +50,21 @@
 
 /** Line Styles */
 pre.firepad-lt-o, pre.firepad-lt-u, pre.firepad-lt-t, pre.firepad-lt-tc {
-  margin-left: 30px;
+  margin-left: 40px;
+}
+
+.firepad-list-left {
+  display:inline-block;
+  margin-left: -40px;
+  width: 40px;
+  padding-right: 5px;
+  text-align: right;
+}
+
+.firepad-todo-left {
+  display:inline-block;
+  margin-left: -20px;
+  width: 20px;
 }
 
 .powered-by-firepad {
