Refresh firepad (fix issue with dropdowns).

--- a/examples/firepad.css
+++ b/examples/firepad.css
@@ -89,7 +89,6 @@ pre.firepad-lt-o, pre.firepad-lt-u, pre.firepad-lt-t, pre.firepad-lt-tc {
   left: 10px;
   right: 0;
   white-space: nowrap;
-  overflow: hidden;
 
   /* Don't select text when double-clicking in toolbar */
   -webkit-touch-callout: none;
@@ -124,6 +123,7 @@ a.firepad-btn:hover {
   color: #fff;
   background-color: #ffbf86;
   border-color: #e6a165;
+  text-decoration: none;
 }
 
 a.firepad-btn:active {
