--- a/lib/firepad.css
+++ b/lib/firepad.css
@@ -61,7 +61,7 @@ pre.firepad-lt-o, pre.firepad-lt-u, pre.firepad-lt-t, pre.firepad-lt-tc {
   text-align: right;
 }
 
-.firepad-todo-left {
+.firepad .firepad-todo-left {
   display:inline-block;
   margin-left: -20px;
   width: 20px;
