Refresh firepad and tweak sidenav CSS.

--- a/css/global.css
+++ b/css/global.css
@@ -341,6 +341,7 @@ a img {
   -webkit-box-shadow: 0 1px 4px rgba(0,0,0,.065);
   -moz-box-shadow: 0 1px 4px rgba(0,0,0,.065);
   box-shadow: 0 1px 4px rgba(0,0,0,.065);
+  list-style-type: none;
 }
 
 .sidenav > li > a {
