--- a/examples/firepad.css
+++ b/examples/firepad.css
@@ -211,6 +211,37 @@ a.firepad-btn:active {
   width: 25px;
 }
 
+.firepad-dialog {
+     position: absolute;
+     left: 0px;
+     top: 0px;
+     width: 100%;
+     height: 100%;
+     z-index: 1000;
+}
+
+.firepad-dialog-div {
+     position: relative;
+     width: 520px;
+     height: 100px;
+     margin: 100px auto;
+     background-color: #fff;
+     border: 1px solid #000;
+     padding: 15px;
+}
+
+.firepad-dialog-input {
+  width: 500px;
+  display: block;
+  padding: 5px 5px;
+  margin: 10px 10px 10px 5px;
+  clear: both;
+  font-weight: normal;
+  line-height: 25px;
+  color: #333333;
+  white-space: nowrap;
+}
+
 /********************************************************************
  * Generated via icomoon.io.
   If you want to make changes, you can go to http://icomoon.io/app/, go to the bottom right and click the
