Modernize the Jekyll Firepad website

--- a/_layouts/docs.html
+++ b/_layouts/docs.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8" />
   <title>Firepad - Documentation</title>
 
-  <link rel="stylesheet" href="http://twitter.github.io/bootstrap/assets/css/bootstrap.css" />
+  <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/2.3.2/css/bootstrap.min.css" />
   <link rel="stylesheet" href="../css/global.css" />
   <link rel="stylesheet" href="../css/borland.css" />
   <link href="../images/favicon.ico" rel="shortcut icon" />
