--- a/examples/firepad.css
+++ b/examples/firepad.css
@@ -1,22 +1,46 @@
 .firepad {
-  /* Default height for a firepad. */
-  height: 400px;
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+  width: 100%;
+  height: 100%;
   position: relative;
-}
-
-.firepad {
   text-align: left;
   line-height: normal;
 }
 
 .firepad .CodeMirror {
-  /* Use width / height of the firepad wrapper element. */
   position: absolute;
-  height: auto;
   top: 0;
-  left: 0;
-  right: 0;
   bottom: 0;
+  right: 0;
+  left: 0;
+  height: auto;
+}
+
+.firepad-with-toolbar .CodeMirror {
+  top: 83px;
+  padding-left: 10px;
+}
+
+.firepad-toolbar {
+  height: 82px;
+  line-height: 82px;
+  padding-left: 10px;
+  border-bottom: 1px solid #c9c9c9;
+
+  /* Don't select text when double-clicking in toolbar */
+  -webkit-touch-callout: none;
+  -webkit-user-select: none;
+  -khtml-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+}
+
+.firepad-toolbar-wrapper {
+  display: inline-block;
+  line-height: 14px;
 }
 
 .firepad-richtext .CodeMirror {
@@ -24,10 +48,9 @@
   font-size: 14px;
 }
 
-.firepad-with-toolbar .CodeMirror {
-  /* Leave room for toolbar and add some padding on the left. */
-  top: 70px;
-  left: 10px;
+.firepad-spacer {
+  height: 10px;
+  width: 1px;
 }
 
 /** Styles for all of the rich-text formatting we support. */
@@ -50,7 +73,7 @@
 
 /** Line Styles */
 pre.firepad-lt-o, pre.firepad-lt-u, pre.firepad-lt-t, pre.firepad-lt-tc {
-  margin-left: 40px;
+  padding-left: 40px;
 }
 
 .firepad-list-left {
@@ -83,24 +106,8 @@ pre.firepad-lt-o, pre.firepad-lt-u, pre.firepad-lt-t, pre.firepad-lt-tc {
   opacity: 1;
 }
 
-.firepad-toolbar {
-  position: absolute;
-  top: 20px;
-  left: 10px;
-  right: 0;
-  white-space: nowrap;
-
-  /* Don't select text when double-clicking in toolbar */
-  -webkit-touch-callout: none;
-  -webkit-user-select: none;
-  -khtml-user-select: none;
-  -moz-user-select: none;
-  -ms-user-select: none;
-  user-select: none;
-}
-
 .firepad-btn-group {
-  margin: 0 5px;
+  margin: 5px 7px 0 0;
   display: inline-block;
 }
 
@@ -212,26 +219,26 @@ a.firepad-btn:active {
 }
 
 .firepad-dialog {
-     position: absolute;
-     left: 0px;
-     top: 0px;
-     width: 100%;
-     height: 100%;
-     z-index: 1000;
+  position: absolute;
+  left: 0px;
+  top: 0px;
+  width: 100%;
+  height: 100%;
+  z-index: 1000;
 }
 
 .firepad-dialog-div {
-     position: relative;
-     width: 520px;
-     height: 100px;
-     margin: 100px auto;
-     background-color: #fff;
-     border: 1px solid #000;
-     padding: 15px;
+  position: relative;
+  width: 400px;
+  height: 100px;
+  margin: 100px auto;
+  background-color: #fff;
+  border: 1px solid #000;
+  padding: 15px;
 }
 
 .firepad-dialog-input {
-  width: 500px;
+  width: 80%;
   display: block;
   padding: 5px 5px;
   margin: 10px 10px 10px 5px;
