Document headless mode

--- a/_layouts/docs.html
+++ b/_layouts/docs.html
@@ -41,6 +41,7 @@
         <ul class="nav nav-list sidenav" data-spy="affix" data-offset-top="150">
           <li><a href="#getting_started"><i class="icon-chevron-right"></i> Getting Started</a></li>
           <li><a href="#api"><i class="icon-chevron-right"></i> API</a></li>
+          <li><a href="#headless"><i class="icon-chevron-right"></i> Headless Mode</a></li>
           <li><a href="#firebase"><i class="icon-chevron-right"></i> Firebase Data</a></li>
           <li><a href="#extending"><i class="icon-chevron-right"></i> Extending</a></li>
         </ul>
