--- a/lib/firepad.css
+++ b/lib/firepad.css
@@ -143,6 +143,12 @@ a.firepad-btn:active {
   box-shadow: inset 0 2px 4px rgba(0,0,0,0.15),0 1px 2px rgba(0,0,0,0.05);
 }
 
+a.firepad-btn-highlight {
+	color: #fff;
+	background-color: #ffbf86;
+	border-color: #e6a165;
+}
+
 .firepad-btn-group > .firepad-btn {
   -webkit-border-radius: 0;
   -moz-border-radius: 0;
