Updated docs for Firepad 1.4.0

--- a/src/_layouts/docs.html
+++ b/src/_layouts/docs.html
@@ -64,7 +64,7 @@
         <a href="mailto:firepad@firebase.com?subject=[Firepad Question]" target="_blank">Contact</a>
       </div>
       <div id="powered-by-firebase">
-        <a href="https://www.firebase.com/"><img src="../images/powered-by-firebase-dim.png"></a>
+        <a href="https://firebase.google.com/"><img src="../images/powered-by-firebase-dim.png"></a>
       </div>
     </div>
   </div>
